pyroscope (0.3.3) hardy; urgency=low

  * rtcontrol: --nul option added (for use with "xargs")
  * rtcontrol: --hash-check action added (use with care!)
  * lstor: --raw option added
  * "done", "prio", "is_ghost" fields added
  * rtmv: tool added (not yet implemented)

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 14 Mar 2010 22:21:09 +0100

pyroscope (0.3.2) hardy; urgency=low

  * rtcontrol: Implemented --start, --close, and --dry-run
  * Fixed encoding issues when printing to a pipe (i.e. not to a tty)
  * Renamed "tracker_alias" to "alias" (adapt your "config.ini")

 -- pyroscope <pyroscope.project@gmail.com>  Sun, 14 Mar 2010 22:17:11 +0100

pyroscope (0.3.1) hardy; urgency=low

  * rtcontrol: Added filtering, sorting and output formatting
  * Added logging configuration

 -- pyroscope <pyroscope.project@gmail.com>  Sat, 13 Mar 2010 23:26:58 +0100

pyroscope (0.2.1) hardy; urgency=low

  * New command line tools "chtor" and "pyroadmin"
  * New option "--debug" for all comannds
  * Configuration system finished, new option "--config-dir" for some tools,
    see http://code.google.com/p/pyroscope/wiki/UserConfiguration
  * New option "--no-date" for "mktor"
  * "mktor" now takes a list of announce URLs (not just one), and creates
    a unique metafile for each tracker in the list
  * Alias names for announce URLs can be configured and given to "mktor"
  * "lstor" now masks sensitive data (passkeys) in announce URLs by default
  * New option "--reveal" for "lstor" to show announce URLs unmasked
  * Concurrent hashing support using named pipes for "mktor", for details
    see http://code.google.com/p/pyroscope/wiki/CommandLineTools#mktor
  * lstor: a missing "creation date" field is now handled correctly

 -- pyroscope <pyroscope.project@gmail.com>  Mon, 08 Mar 2010 01:45:09 +0100

pyroscope (0.1.1) hardy; urgency=low

  * First release of "pyrocore", containing the "lstor" and "mktor" utilities.
