@@ -3,6 +3,9 @@ pyroscope (0.3.3) hardy; urgency=low
   * rtcontrol: --nul option added (for use with "xargs")
   * rtcontrol: --hash-check action added (use with care!)
   * lstor: --raw option added
+  * chtor: options --no-skip, --force, --clean, --clean-all,
+    --make-private, --make-public, --clean-rtorrent, and 
+    --no-cross-seed added
   * "done", "prio", "is_ghost" fields added
   * rtmv: tool added (not yet implemented)
 
